@@ -18,6 +18,7 @@
 - vips8 command-line interface uses this to turn sequential mode on
   automatically when possible
 - better handling of input files in vips7 command-line interface
+- sequential can skip ahead, so extract / insert are now seq
 
 18/6/12 started 7.28.9
 - slightly more memory debugging output
